// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render TranscriptRow 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row border rounded mt-3 p-1 bg-light"
      >
        <div
          class="col-md-12"
        >
          <div
            class="row"
          >
            <div
              class="col-md-12"
            >
              <div
                class="row mt-1 align-items-center"
              >
                <div
                  class="col-md-2"
                >
                  <div
                    class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                    style="width: 40px; height: 40px;"
                  >
                    JS
                  </div>
                </div>
                <div
                  class="col-md-6"
                >
                  <h4
                    class="m-0"
                  >
                    James Smith
                  </h4>
                </div>
              </div>
              <div
                class="row mt-1 align-items-center"
              >
                <div
                  class="col-md-2"
                >
                  00:10
                </div>
                <div
                  class="col-md-10"
                >
                  <div>
                    Good morning, everyone.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row border rounded mt-3 p-1 bg-light"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <div
            class="col-md-12"
          >
            <div
              class="row mt-1 align-items-center"
            >
              <div
                class="col-md-2"
              >
                <div
                  class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                  style="width: 40px; height: 40px;"
                >
                  JS
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <h4
                  class="m-0"
                >
                  James Smith
                </h4>
              </div>
            </div>
            <div
              class="row mt-1 align-items-center"
            >
              <div
                class="col-md-2"
              >
                00:10
              </div>
              <div
                class="col-md-10"
              >
                <div>
                  Good morning, everyone.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row p-3"
      >
        <div
          class="col-md-12"
        >
          <h3
            class="text-center"
          >
            Transcript
          </h3>
          <div
            class="row border rounded mt-3 p-1 bg-light"
          >
            <div
              class="col-md-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      <div
                        class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                        style="width: 40px; height: 40px;"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="col-md-6"
                    >
                      <h4
                        class="m-0"
                      >
                        James Smith
                      </h4>
                    </div>
                  </div>
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      00:10
                    </div>
                    <div
                      class="col-md-10"
                    >
                      <div>
                        Good morning, everyone.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row border rounded mt-3 p-1 bg-light"
          >
            <div
              class="col-md-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      <div
                        class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                        style="width: 40px; height: 40px;"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="col-md-6"
                    >
                      <h4
                        class="m-0"
                      >
                        James Smith
                      </h4>
                    </div>
                  </div>
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      00:15
                    </div>
                    <div
                      class="col-md-10"
                    >
                      <div>
                        Hi, 
                        <span
                          class="fw-bold"
                        >
                          Madison
                        </span>
                        ! How are you?
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row border rounded mt-3 p-1 bg-light"
          >
            <div
              class="col-md-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      <div
                        class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                        style="width: 40px; height: 40px;"
                      >
                        MB
                      </div>
                    </div>
                    <div
                      class="col-md-6"
                    >
                      <h4
                        class="m-0"
                      >
                        Madison Butler
                      </h4>
                    </div>
                  </div>
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      00:05
                    </div>
                    <div
                      class="col-md-10"
                    >
                      <div>
                        Very good, thanks !
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row border rounded mt-3 p-1 bg-light"
          >
            <div
              class="col-md-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      <div
                        class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                        style="width: 40px; height: 40px;"
                      >
                        MB
                      </div>
                    </div>
                    <div
                      class="col-md-6"
                    >
                      <h4
                        class="m-0"
                      >
                        Madison Butler
                      </h4>
                    </div>
                  </div>
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      00:17
                    </div>
                    <div
                      class="col-md-10"
                    >
                      <div>
                        Oh, before I forget, can you please send me the 
                        <span
                          class="fw-bold"
                        >
                          quote
                        </span>
                         we discussed 
                        <span
                          class="fw-bold"
                        >
                          yesterday
                        </span>
                        ?
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row border rounded mt-3 p-1 bg-light"
          >
            <div
              class="col-md-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      <div
                        class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                        style="width: 40px; height: 40px;"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="col-md-6"
                    >
                      <h4
                        class="m-0"
                      >
                        James Smith
                      </h4>
                    </div>
                  </div>
                  <div
                    class="row mt-1 align-items-center"
                  >
                    <div
                      class="col-md-2"
                    >
                      00:04
                    </div>
                    <div
                      class="col-md-10"
                    >
                      <div>
                        Sure, I will send you an email with the 
                        <span
                          class="fw-bold"
                        >
                          quote
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row p-3"
    >
      <div
        class="col-md-12"
      >
        <h3
          class="text-center"
        >
          Transcript
        </h3>
        <div
          class="row border rounded mt-3 p-1 bg-light"
        >
          <div
            class="col-md-12"
          >
            <div
              class="row"
            >
              <div
                class="col-md-12"
              >
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    <div
                      class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                      style="width: 40px; height: 40px;"
                    >
                      JS
                    </div>
                  </div>
                  <div
                    class="col-md-6"
                  >
                    <h4
                      class="m-0"
                    >
                      James Smith
                    </h4>
                  </div>
                </div>
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    00:10
                  </div>
                  <div
                    class="col-md-10"
                  >
                    <div>
                      Good morning, everyone.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row border rounded mt-3 p-1 bg-light"
        >
          <div
            class="col-md-12"
          >
            <div
              class="row"
            >
              <div
                class="col-md-12"
              >
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    <div
                      class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                      style="width: 40px; height: 40px;"
                    >
                      JS
                    </div>
                  </div>
                  <div
                    class="col-md-6"
                  >
                    <h4
                      class="m-0"
                    >
                      James Smith
                    </h4>
                  </div>
                </div>
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    00:15
                  </div>
                  <div
                    class="col-md-10"
                  >
                    <div>
                      Hi, 
                      <span
                        class="fw-bold"
                      >
                        Madison
                      </span>
                      ! How are you?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row border rounded mt-3 p-1 bg-light"
        >
          <div
            class="col-md-12"
          >
            <div
              class="row"
            >
              <div
                class="col-md-12"
              >
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    <div
                      class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                      style="width: 40px; height: 40px;"
                    >
                      MB
                    </div>
                  </div>
                  <div
                    class="col-md-6"
                  >
                    <h4
                      class="m-0"
                    >
                      Madison Butler
                    </h4>
                  </div>
                </div>
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    00:05
                  </div>
                  <div
                    class="col-md-10"
                  >
                    <div>
                      Very good, thanks !
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row border rounded mt-3 p-1 bg-light"
        >
          <div
            class="col-md-12"
          >
            <div
              class="row"
            >
              <div
                class="col-md-12"
              >
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    <div
                      class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                      style="width: 40px; height: 40px;"
                    >
                      MB
                    </div>
                  </div>
                  <div
                    class="col-md-6"
                  >
                    <h4
                      class="m-0"
                    >
                      Madison Butler
                    </h4>
                  </div>
                </div>
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    00:17
                  </div>
                  <div
                    class="col-md-10"
                  >
                    <div>
                      Oh, before I forget, can you please send me the 
                      <span
                        class="fw-bold"
                      >
                        quote
                      </span>
                       we discussed 
                      <span
                        class="fw-bold"
                      >
                        yesterday
                      </span>
                      ?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row border rounded mt-3 p-1 bg-light"
        >
          <div
            class="col-md-12"
          >
            <div
              class="row"
            >
              <div
                class="col-md-12"
              >
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    <div
                      class="rounded-circle bg-primary d-flex justify-content-center align-items-center text-white fw-bold"
                      style="width: 40px; height: 40px;"
                    >
                      JS
                    </div>
                  </div>
                  <div
                    class="col-md-6"
                  >
                    <h4
                      class="m-0"
                    >
                      James Smith
                    </h4>
                  </div>
                </div>
                <div
                  class="row mt-1 align-items-center"
                >
                  <div
                    class="col-md-2"
                  >
                    00:04
                  </div>
                  <div
                    class="col-md-10"
                  >
                    <div>
                      Sure, I will send you an email with the 
                      <span
                        class="fw-bold"
                      >
                        quote
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
